[metadata]
name = spyc_iot
version = 0.0.7
author = SPYC-IT
author_email = ite@school.pyc.edu.hk
license = MIT
description = Package for common IOT usages. Developed by Shatin Pui Ying College.
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src